--- a/Genisis.Presentation.Wpf/Genisis.Presentation.Wpf.csproj
+++ b/Genisis.Presentation.Wpf/Genisis.Presentation.Wpf.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Serilog" Version="3.1.1" />
