--- a/Genisis.Tests/Genisis.Tests.csproj
+++ b/Genisis.Tests/Genisis.Tests.csproj
@@ -16,16 +16,21 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Genisis.Core\Genisis.Core.csproj" />
     <ProjectReference Include="..\Genisis.Infrastructure\Genisis.Infrastructure.csproj" />
     <ProjectReference Include="..\Genisis.Application\Genisis.Application.csproj" />
+    <ProjectReference Include="..\Genisis.Presentation.Wpf\Genisis.Presentation.Wpf.csproj" />
   </ItemGroup>
 
   <ItemGroup>
