--- a/Genisis.Presentation.Wpf/Genisis.Presentation.Wpf.csproj
+++ b/Genisis.Presentation.Wpf/Genisis.Presentation.Wpf.csproj
@@ -37,4 +37,10 @@
     <!-- Rely on implicit XAML items to avoid duplicates -->
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
